src/common/scss/blocks/helsinki/_banner.scss
.wp-block-hds-wp-banner {
	background-color: var(--primary-color);
	color: var(--primary-content-color);
	margin-bottom: $paragraph-margin-bottom-small;

	@include breakpoint('m') {
		margin-bottom: $paragraph-margin-bottom-big;
	}

	.content {
		display: flex;
		flex-flow: column;
		padding: spacing('l') spacing('m');

		&__inner {

			&--icon {
				svg {
					fill: var(--primary-content-color);
					margin-right: spacing('s');
					width: 64px;

					@include breakpointMax('m') {
						margin-bottom: spacing('s');
					}
				}
			}

			&--text {
			}

			&--button {
			}
		}

		&__heading {
			font-size: rem-calc(24);
			margin: 0 0 spacing('s');
			color: var(--primary-content-color);
		}

		&__text {
			font-size: rem-calc(18);
			margin: 0 0 spacing('m');
			color: var(--primary-content-color);
			max-width: none;

			a {
				color: inherit;

				svg {
					fill: var(--primary-content-color);
				}
			}
		}

		&__link {
			background-color: var(--primary-content-color);
			border-color: var(--primary-content-color);
			color: var(--primary-content-secondary-color);
		}

		&__link:hover {
			color: var(--primary-content-color);
			background-color: transparent;
		}

		&__link svg {
			fill: var(--primary-content-secondary-color);
		}

		&__link:hover svg {
			fill: var(--primary-content-color);
		}

		@include breakpoint('m') {
			padding: spacing('l');
			flex-flow: row;

			&__inner {

				&--icon {
					float: left;

					svg {
						width: 72px;
					}
				}

				&--text {
				}

				&--button {
				}
			}
		}

		@include breakpoint('l') {
			padding: spacing('layout-m') spacing('l') spacing('3-xl');
			flex-flow: row;

			&__heading {
				font-size: rem-calc(36);
				margin-bottom: spacing('l');
			}

			&__inner {

				&--icon {
					svg {
						width: 100px;
					}
				}

				&--text {
				}

				&--button {
				}
			}
		}

		@include breakpoint('xl') {
			padding: spacing('xl') spacing('l') spacing('layout-m');
			flex-flow: row;

			&__heading {
				margin-bottom: spacing('s');
			}

			&__inner {

				&--text {
				}

				&--button {
				}
			}
		}
	}

	&.no-icon {

		.content {

			&__inner {

				&--text {
					margin: auto;
				}
			}
		}
	}

	&.no-button {

		.content {

			&__inner {

			}

			&__text {
				margin-bottom: 0;
			}
		}
	}

	&[class*="-secondary-color"] {
		background-color: var(--secondary-color);
		color: var(--secondary-content-color);

		.content {

			&__inner {

				&--icon {
					svg {
						fill: var(--secondary-content-color);
					}
				}
	
				&--text {
				}
	
				&--button {
				}
			}
	
			&__heading {
				color: var(--secondary-content-color);
			}
	
			&__text {
				color: var(--secondary-content-color);
				a {	
					svg {
						fill: var(--secondary-content-color);
					}
				}	
			}
	
			&__link {
				background-color: $black;
				border-color: $black;
				color: $white;
			}
	
			&__link:hover {
				color: $black;
				background-color: transparent;
			}
	
			&__link svg {
				fill: $white;
			}
	
			&__link:hover svg {
				fill: $black;
			}
	
		}
	}

	&[class*="-align-center"] {
	
		.content {

			&-wrapper {
				flex-grow: 1;
			}

			&__heading {
				margin-left: auto;
				margin-right: auto;
				text-align: center;
			}

			&__text {
				margin-left: auto;
				margin-right: auto;
				text-align: center;
			}

			&__inner {
				&--button {
					text-align: center;
				}
			}
		}
	}
}

